--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -25,12 +25,23 @@
     "isActivated": {
       "title": "Activation réussie !",
       "message": "Votre compte est désormais activé, vous pouvez dès à présent vous connecter !"
+    },
+    "request-password":
+    {
+      "instruction": "Veuillez renseigner votre email et nous vous enverrons un lien pour renouveller votre mot de passe !",
+      "title" : "Mot de passe oublié..."
+    },
+    "reset-password":
+    {
+      "instruction":"Renseigner votre nouveau mot de passe !",
+      "title": "Renouvelez votre mot de passe"
     }
   },
   "user": {
     "firstname": "Prénom",
     "lastname": "Nom",
     "password": "Mot de passe",
+    "renewPassword": "Nouveau mot de passe",
     "email": "Adresse email",
     "deliveryAdress": "Adresse de livraison",
     "billingAdress": "Adresse de facturation",
@@ -51,7 +62,8 @@
     "required": {
       "field": "Le champ {{field}} est requis !",
       "length": "Le champ {{field}} doit contenir entre {{minLength}} et {{maxLength}} caractères!",
-      "exactLength": "Le champ {{field}} doit avoir exactement {{length}} caractères !"
+      "exactLength": "Le champ {{field}} doit avoir exactement {{length}} caractères !",
+      "cgu": "Vous devez acceptez les conditions générales d'utilisation du logiciel avant de créer votre compte !"
     },
     "password": {
       "confirm": "Les mots de passes sont différents ! "
@@ -63,7 +75,14 @@
       "title": "Erreur de validation",
       "message": "Votre lien de validation n'est plus valide! Veuillez le renouvelez en renseignant votre adresse email dans le formulaire ci-dessous !",
       "clientSide": "Une erreur est survenue! Veuillez recliquez sur le lien dans le mail de validation !"
-    }
+    },
+    "reset-password":
+    {
+      "title": "Erreur de validation",
+      "message" : " Votre lien de renouvellement n'est plus valide! Veuillez le renouveler en renseignant votre adresse email dans le formulaire ci-dessous !",
+      "clientSide": "Une erreur est survenue! Veuillez recliquez sur le lien dans le mail de renouvellement !"
+    },
+    "lost":"Oops ! Vous vous êtes peut-être perdue !"
   },
   "terms": {
     "title": "les conditions d'utilisations",
@@ -71,5 +90,10 @@
   },
   "billingAdress": {
     "keep": "Garder la même adresse pour la facturation ?"
+  },
+  "button": {
+    "send": "Envoyer",
+    "password-request": "Renouveler votre mot de passe ",
+    "forgotten-password": "Mot de passe oublié ?"
   }
 }
