WIP:Ajout du produit dans le panier

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,9 @@
 {
   "Home": "Accueil",
+  "menu": {
+    "page-title": "Menu",
+    "page-description": "Découvrez notre carte et composez votre menu."
+  },
   "Contact": "Contact",
   "About": "A propos",
   "Login": {
