WIP:Ajout layout nebular dans template general

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -3,14 +3,15 @@
   "menu": {
     "page-title": "Menu",
     "page-description": "Découvrez notre carte et composez votre menu.",
-    "add-item-success": "Vous avez ajouté un produit à votre panier"
+    "cleanCart-success": "Votre panier est vide",
+    "cart-is-empty": "Votre panier est vide",
+    "add-item": "Produit ajouté au panier",
+    "remove-item": "Produit retiré du panier"
+  },
   "contact": {
     "contact-us": "Nous contacter",
     "contact-us-text": "Vous souhaitez nous contacter ? Vous pouvez  nous écrire en remplissant le formulaire ci-dessous.",
     "recaptcha-error": "Vous devez valider le captcha"
-  "menu": {
-    "page-title": "Menu",
-    "page-description": "Découvrez notre carte et composez votre menu."
   },
   "Contact": "Contact",
   "About": "A propos",
