--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -17,7 +17,7 @@
     "phone-number": "+33 1234567890",
     "email": "mwrestaurant@gmail.com",
     "logo": "M&W",
-    "message": "Necessary, making this the first true generator on the Internet.",
+    "message": "Venez passer un bon moment avec nous !",
     "opening-title": "Horaires",
     "opening-days": "Ouvert tous les jours",
     "opening-hours": "De 11h00 à minuit"
